--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -134,7 +134,7 @@
         android:layout_height="50dp"
         android:id="@+id/tvLogout"
         android:textSize="@dimen/text_1"
-        android:textColor="@color/theme"
+        android:textColor="@color/red"
         android:gravity="center"
         android:background="@drawable/ripple_bg"
         android:layout_marginTop="8dp"
