--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -7,42 +7,57 @@
     android:background="@color/white"
     android:fitsSystemWindows="true"
     tools:context="com.zs.wanandroid.ui.web.WebActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:orientation="horizontal"
         android:background="@color/white"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
+            android:id="@+id/ivBack"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/ivBack"
-            android:src="@mipmap/back"
+            android:background="@drawable/ripple_circle_bg"
             android:padding="10dp"
-            android:background="@drawable/ripple_circle_bg"/>
+            android:src="@mipmap/back" />
+
         <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:textColor="@color/text_1"
-            android:textStyle="bold"
-            android:layout_marginRight="40dp"
             android:layout_marginLeft="10dp"
-            android:maxLines="1"
+            android:layout_marginRight="40dp"
             android:ellipsize="end"
-            android:id="@+id/tvTitle"/>
+            android:maxLines="1"
+            android:textColor="@color/text_1"
+            android:textSize="17dp"
+            android:textStyle="bold" />
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="55dp"
         android:background="@color/division_line_thickening"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="55dp"/>
-    <WebView
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webView"
-        android:layout_marginTop="56dp"/>
+        android:layout_marginTop="56dp">
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"/>
+        <com.zs.wanandroid.weight.LoadingTip
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/loadingTip"/>
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
