--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,9 +98,7 @@
                             android:layout_height="42dp"
                             android:gravity="center_vertical"
                             android:text="文章列表"
-                            android:textColor="@color/text_1"
-                            android:textSize="19dp"
-                            android:textStyle="bold" />
+                            style="@style/text_title"/>
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -116,43 +114,64 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rlSearch"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="84dp"
         android:alpha="0"
         android:background="@color/white">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/set_padding"
+            android:text="首页"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="40dp"
+            style="@style/text_title"/>
+        <ImageView
+            android:id="@+id/ivSearch"
+            android:layout_width="40dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="38dp"
+            android:layout_marginRight="@dimen/padding"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/search_bg_radius"
+            android:padding="7dp"
+            android:src="@mipmap/home_search" />
+        <!--        -->
+        <!--        <RelativeLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="42dp"-->
+        <!--            android:layout_marginLeft="20dp"-->
+        <!--            android:layout_marginTop="43dp"-->
+        <!--            android:layout_marginRight="20dp"-->
+        <!--            android:background="@drawable/search_bg"-->
+        <!--            android:elevation="5dp">-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="43dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/search_bg">
+        <!--            <TextView-->
+        <!--                android:id="@+id/tvSearch"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:background="@drawable/ripple_bg"-->
+        <!--                android:gravity="center_vertical"-->
+        <!--                android:paddingLeft="30dp"-->
+        <!--                android:text="请输入关键字进行搜索"-->
+        <!--                android:textColor="@color/text_2"-->
+        <!--                android:textSize="@dimen/text_1"-->
+        <!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/tvSearch"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/ripple_bg"
-                android:gravity="center_vertical"
-                android:paddingLeft="30dp"
-                android:text="请输入关键字进行搜索"
-                android:textColor="@color/text_2"
-                android:textSize="@dimen/text_1"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:padding="7dp"
-                android:src="@mipmap/search_theme2" />
-        </RelativeLayout>
-    </RelativeLayout>
+        <!--            <ImageView-->
+        <!--                android:layout_width="36dp"-->
+        <!--                android:layout_height="36dp"-->
+        <!--                android:layout_alignParentRight="true"-->
+        <!--                android:layout_centerVertical="true"-->
+        <!--                android:layout_marginRight="15dp"-->
+        <!--                android:padding="7dp"-->
+        <!--                android:src="@mipmap/search_theme2" />-->
+        <!--        </RelativeLayout>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.zs.wanandroid.weight.LoadingTip
         android:id="@+id/loadingTip"
