--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F60B0B</color>
+    <color name="colorPrimary">#00CAAE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-
-    <color name="theme">#F60B0B</color>
+<!--    #F60B0B-->
+    <color name="theme">#00CAAE</color>
     <color name="theme_2">#00CAAE</color>
 
     <color name="normal_color">#bfbfbf</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#111111</color>
+    <color name="red">#F60B0B</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="division_line">#EDEDED</color>
     <color name="division_line_thickening">#F8F8F8</color>
 
     <!--    点击波纹效果颜色-->
     <color name="ripple_gray">#D1D1D1</color>
+    <!--    点击波纹效果颜色-->
+    <color name="search_bg_gray">#EFEFEF</color>
 
     <!--    一级标题颜色-->
     <color name="text_1">#333333</color>
