--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="text_1">15dp</dimen>
     <dimen name="text_2">13dp</dimen>
     <dimen name="text_3">11dp</dimen>
+    <dimen name="text_title">19dp</dimen>
     <dimen name="padding">20dp</dimen>
     <dimen name="set_padding">26dp</dimen>
     <dimen name="padding_left">20dp</dimen>
