--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,6 +84,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="42dp"
+                        android:background="@color/white"
                         android:orientation="horizontal">
 
                         <ImageView
