--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
 <!--    #F60B0B-->
-    <color name="theme">#00CAAE</color>
+    <color name="theme">#F60B0B</color>
     <color name="theme_2">#00CAAE</color>
 
     <color name="normal_color">#bfbfbf</color>
