--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/home_top_bg"
+                    android:id="@+id/llRadius"
                     android:orientation="vertical">
 
                     <View
@@ -99,7 +100,7 @@
                             android:layout_height="42dp"
                             android:gravity="center_vertical"
                             android:text="文章列表"
-                            style="@style/text_title"/>
+                            style="@style/text_title" />
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -114,7 +115,6 @@
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rlSearch"
         android:layout_width="match_parent"
@@ -141,39 +141,7 @@
             android:background="@drawable/search_bg_radius"
             android:padding="7dp"
             android:src="@mipmap/home_search" />
-        <!--        -->
-        <!--        <RelativeLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="42dp"-->
-        <!--            android:layout_marginLeft="20dp"-->
-        <!--            android:layout_marginTop="43dp"-->
-        <!--            android:layout_marginRight="20dp"-->
-        <!--            android:background="@drawable/search_bg"-->
-        <!--            android:elevation="5dp">-->
-
-        <!--            <TextView-->
-        <!--                android:id="@+id/tvSearch"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="match_parent"-->
-        <!--                android:background="@drawable/ripple_bg"-->
-        <!--                android:gravity="center_vertical"-->
-        <!--                android:paddingLeft="30dp"-->
-        <!--                android:text="请输入关键字进行搜索"-->
-        <!--                android:textColor="@color/text_2"-->
-        <!--                android:textSize="@dimen/text_1"-->
-        <!--                android:textStyle="bold" />-->
-
-        <!--            <ImageView-->
-        <!--                android:layout_width="36dp"-->
-        <!--                android:layout_height="36dp"-->
-        <!--                android:layout_alignParentRight="true"-->
-        <!--                android:layout_centerVertical="true"-->
-        <!--                android:layout_marginRight="15dp"-->
-        <!--                android:padding="7dp"-->
-        <!--                android:src="@mipmap/search_theme2" />-->
-        <!--        </RelativeLayout>-->
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <com.zs.wanandroid.weight.LoadingTip
         android:id="@+id/loadingTip"
         android:layout_width="match_parent"
