--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="text_3">11dp</dimen>
     <dimen name="text_title">19dp</dimen>
     <dimen name="padding">20dp</dimen>
+    <dimen name="dividing_line">30dp</dimen>
     <dimen name="set_padding">26dp</dimen>
     <dimen name="padding_left">20dp</dimen>
     <dimen name="padding_right">20dp</dimen>
