--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="text_2">13dp</dimen>
     <dimen name="text_3">11dp</dimen>
     <dimen name="text_title">19dp</dimen>
+    <dimen name="dialog_text_content">17dp</dimen>
     <dimen name="padding">20dp</dimen>
     <dimen name="dividing_line">30dp</dimen>
     <dimen name="set_padding">26dp</dimen>
