--- a/app/src/main/res/layout/activity_integral.xml
+++ b/app/src/main/res/layout/activity_integral.xml
@@ -4,24 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zs.wanandroid.ui.main.home.HomeFragment">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:background="@color/white"
+    tools:context="com.zs.wanandroid.ui.Integral.IntegralActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/ivBack"
+            android:src="@mipmap/back"
+            android:padding="10dp"
+            android:background="@drawable/ripple_circle_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
+            android:textColor="@color/text_1"
+            android:text="积分"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="55dp"
+        android:background="@color/division_line_thickening"/>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smartRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:layout_marginTop="57dp"
         app:srlEnableAutoLoadMore="false"
         app:srlEnableLoadMore="true"
         app:srlEnableOverScrollBounce="true"
-        app:srlEnableRefresh="true">
-
-        <!--        <com.scwang.smartrefresh.layout.header.ClassicsHeader-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="105dp"-->
-        <!--            app:srlAccentColor="@color/text_2"-->
-        <!--            app:srlPrimaryColor="@color/white" />-->
-
+        app:srlEnableRefresh="false">
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -37,30 +63,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:contentScrim="@color/transparent"
+                    app:layout_collapseParallaxMultiplier="0.99999"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-                    <ImageView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/transparent"
-                        app:layout_collapseMode="parallax"
-                        app:layout_collapseParallaxMultiplier="0.99999" />
+                        android:gravity="center"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tvIntegralAnim"
+                            android:textSize="60dp"
+                            android:textColor="@color/theme"
+                            android:text="0"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/text_1"
+                            android:text="我的积分"/>
+                    </LinearLayout>
+
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
             </com.google.android.material.appbar.AppBarLayout>
-
-            <cn.bingoogolapple.bgabanner.BGABanner
-                android:id="@+id/banner"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                app:banner_indicatorGravity="left"
-                app:banner_pageChangeDuration="1000"
-                app:banner_pointAutoPlayAble="true"
-                app:banner_pointAutoPlayInterval="3000"
-                app:banner_pointContainerBackground="@color/transparent"
-                app:banner_pointContainerLeftRightPadding="@dimen/padding_left"
-                app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
-                app:banner_pointTopBottomMargin="40dp" />
 
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nestedView"
@@ -92,58 +118,35 @@
                             android:layout_width="42dp"
                             android:layout_height="42dp"
                             android:layout_marginLeft="10dp"
-                            android:padding="8dp"
-                            android:src="@mipmap/article_logo" />
+                            android:padding="10dp"
+                            android:src="@mipmap/integral_icon" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="42dp"
                             android:gravity="center_vertical"
-                            android:text="文章列表"
+                            android:text="积分记录"
                             style="@style/text_title" />
                     </LinearLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvHomeList"
+                        android:id="@+id/rvIntegralList"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/white"/>
+                        android:background="@color/white"
+                        android:overScrollMode="never"
+                        android:paddingLeft="@dimen/padding"
+                        android:paddingRight="@dimen/padding" />
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
 
-
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/rlSearch"
-        android:layout_width="match_parent"
-        android:layout_height="84dp"
-        android:alpha="0"
-        android:background="@color/white">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/set_padding"
-            android:text="首页"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="40dp"
-            style="@style/text_title"/>
-        <ImageView
-            android:id="@+id/ivSearch"
-            android:layout_width="40dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="38dp"
-            android:layout_marginRight="@dimen/padding"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:background="@drawable/search_bg_radius"
-            android:padding="7dp"
-            android:src="@mipmap/home_search" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.zs.wanandroid.weight.LoadingTip
         android:id="@+id/loadingTip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="57dp"
         android:visibility="gone" />
 </FrameLayout>
