--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
+            android:layout_above="@+id/llMyRank"
             app:srlEnableAutoLoadMore="false"
             app:srlEnableLoadMore="true"
             app:srlEnableOverScrollBounce="true"
