--- a/app/src/main/res/layout/activity_integral.xml
+++ b/app/src/main/res/layout/activity_integral.xml
@@ -37,12 +37,29 @@
         android:layout_height="2dp"
         android:layout_marginTop="55dp"
         android:background="@color/division_line_thickening"/>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        android:gravity="center"
+        android:layout_marginTop="57dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvIntegralAnim"
+            android:textSize="60dp"
+            android:textColor="@color/theme"
+            android:text="0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/text_1"
+            android:text="我的积分"/>
+    </LinearLayout>
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smartRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:layout_marginTop="57dp"
         app:srlEnableAutoLoadMore="false"
         app:srlEnableLoadMore="true"
@@ -51,41 +68,20 @@
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBar"
                 android:layout_width="match_parent"
                 android:layout_height="215dp"
                 android:background="@color/transparent">
-
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:id="@+id/toolbar_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:contentScrim="@color/transparent"
-                    app:layout_collapseParallaxMultiplier="0.99999"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/tvIntegralAnim"
-                            android:textSize="60dp"
-                            android:textColor="@color/theme"
-                            android:text="0"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            style="@style/text_1"
-                            android:text="我的积分"/>
-                    </LinearLayout>
+
 
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
-
             </com.google.android.material.appbar.AppBarLayout>
 
             <androidx.core.widget.NestedScrollView
