--- a/app/src/main/res/layout/fragment_article_list.xml
+++ b/app/src/main/res/layout/fragment_article_list.xml
@@ -17,7 +17,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rvProject"/>
+            android:id="@+id/rvProject"
+            android:overScrollMode="never"/>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     <com.zs.wanandroid.weight.LoadingTip
         android:layout_width="match_parent"
