--- a/app/src/main/res/layout/fragment_system_list.xml
+++ b/app/src/main/res/layout/fragment_system_list.xml
@@ -8,6 +8,7 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvSystem"
+       android:overScrollMode="never"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingStart="@dimen/padding_left"
